@@ -54,7 +54,6 @@ error:
 PSEUDO_END (__clone)
 
 thread_start:
-#ifdef RESET_PID
 	tmh	%r3,1		/* CLONE_THREAD == 0x00010000 */
 	jne	1f
 	lhi	%r2,-1
@@ -65,7 +64,6 @@ thread_start:
 	st	%r2,PID(%r3)
 	st	%r2,TID(%r3)
 1:
-#endif
 	/* fn is in gpr 1, arg in gpr 0 */
 	lr      %r2,%r0         /* set first parameter to void *arg */
 	ahi     %r15,-96        /* make room on the stack for the save area */
