@@ -1,3 +1,11 @@
+2014-06-25  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/unix/sysv/linux/s390/s390-32/clone.S: Deconditionalize the
+	code that was previously under [RESET_PID].
+	* sysdeps/unix/sysv/linux/s390/s390-64/clone.S: Likewise.
+	* nptl/sysdeps/unix/sysv/linux/s390/s390-32/clone.S: File removed.
+	* nptl/sysdeps/unix/sysv/linux/s390/s390-64/clone.S: File removed.
+
 2014-06-25  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/unix/sysv/linux/dl-opendir.c (__ASSUME_O_CLOEXEC): Do
